prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_ternary_mismatch.diag.txt
ERROR: expression of type 'int|string' cannot be assigned to type 'int'
testData/diagnostics/compilation_errors/type_inference/test_ternary_mismatch.nut:3:0

local flag = true
local x: int = flag ? 42 : "hello"
^---------------------------------
return x


